force-app/main/default/objects/Fixed_Quote_Group__c/Fixed_Quote_Group__c.object-meta.xml
<CustomObject>
    <label>Fixed Quote Group</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Quote Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>