force-app/main/default/objects/Fixed_Quote_Group__c/fields/CESContract__c.field-meta.xml
<CustomField>
    <fullName>CESContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Fixed Quote Groups</relationshipLabel>
    <relationshipName>Fixed_Quote_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>