force-app/main/default/objects/Fixed_Quote_Group__c/fields/Confirm_Stage__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Stage__c</fullName>
    <label>Confirm Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Contract Type</fullName>
            </value>
            <value>
                <fullName>Floating Index</fullName>
            </value>
            <value>
                <fullName>Over Index</fullName>
            </value>
            <value>
                <fullName>Under Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>