force-app/main/default/objects/Fixed_Quote_Group__c/fields/Fixed_Quote__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixed Quote</label>
    <referenceTo>Fixed_Quote__c</referenceTo>
    <relationshipLabel>Fixed Quote Groups</relationshipLabel>
    <relationshipName>Fixed_Quote_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>