force-app/main/default/objects/Fixed_Quote_Group__c/fields/NomGroupsJSON__c.field-meta.xml
<CustomField>
    <fullName>NomGroupsJSON__c</fullName>
    <label>Nom Groups JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>