force-app/main/default/objects/Fixed_Quote_Group__c/fields/Position_List_JSON__c.field-meta.xml
<CustomField>
    <fullName>Position_List_JSON__c</fullName>
    <label>Position List JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>