force-app/main/default/objects/Fixed_Quote_Group__c/fields/Premise_List_JSON__c.field-meta.xml
<CustomField>
    <fullName>Premise_List_JSON__c</fullName>
    <label>Premise List JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>