force-app/main/default/objects/Fixed_Quote_Group__c/fields/Target_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Target_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Target Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>